se agrega dockerfile

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,12 @@
-PORT = 5000
+SERVER_TIMEOUT=1080000
+SERVER_PORT=3002
 
-MONGO_URI = mongodb+srv://federicoloupias:senillosa1@flcluster.5vsgj.mongodb.net/AppHackerNews?retryWrites=true&w=majority
+DATABASE_HOST=localhost
+DATABASE_PORT=27017
+DATABASE_USERNAME=root
+DATABASE_PASSWORD=root
+DATABASE_NAME=admin
+DATABASE_TYPE=mongodb
+DATABASE_CONNECTION_TIME_OUT=150000
+DATABASE_ACQUIRE_TIME_OUT=150000
+DATABASE_CONNECTION_LIMIT=20
