--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:14 as build
-WORKDIR /
+WORKDIR /client
 COPY package*.json ./
 RUN npm install
-COPY . .
+COPY . ./
 RUN npm run build
 
 FROM nginx
-COPY --from=build /build /usr/share/nginx/html
+COPY --from=build /client/build /usr/share/nginx/html
